--- a/Server Folder/SSLearningTeam/.classpath
+++ b/Server Folder/SSLearningTeam/.classpath
@@ -15,5 +15,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/json-lib-2.4-jdk15.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-codec-1.9.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/gson-2.0.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
