--- a/Mobile Folder/Tingshuo/package.json
+++ b/Mobile Folder/Tingshuo/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "react": "16.3.1",
     "react-native": "0.55.4",
+    "react-native-autocomplete-input": "^3.5.0",
     "react-native-deprecated-custom-components": "^0.1.2",
+    "react-native-radio-master": "^1.0.1",
     "react-native-side-menu": "^1.1.3",
+    "react-native-smscode-count-down": "^0.1.14",
     "react-native-tab-navigator": "^0.3.4"
   },
   "devDependencies": {
