--- a/Server Folder/SSLearningTeam/WebContent/WEB-INF/web.xml
+++ b/Server Folder/SSLearningTeam/WebContent/WEB-INF/web.xml
@@ -35,4 +35,12 @@
   <welcome-file-list>
     <welcome-file>init.jsp</welcome-file>
   </welcome-file-list>
+   <error-page>
+  <error-code>404</error-code>
+  <location>/errorpage/404.jsp</location>
+ </error-page>
+ <error-page>
+  <error-code>500</error-code>
+  <location>/errorpage/500.jsp</location>
+ </error-page>
 </web-app>
